[package]
name = "kvs"
version = "0.1.0"
authors = ["luke"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "0.11"
criterion = "0.2.11"
predicates = "1.0.0"
clap = "2.33.0"
failure = "0.1.6"
tempfile = "3.1.0"
walkdir = "2.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
failure_derive = "0.1.6"
log = "*"